# arxiv_paper_multi_agent

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: common.py  graph.py  graph_regacy.py  prompts.py  state.py  tools.py
src/agents/: agent.py  agent_node.py  agent_regacy.py
src/agents/paper_agent/: paper_agent_nodes.py  paper_agents.py  paper_agents_regacy.py
src/agents/paper_agent/utils/: paper_agent_utils.py
src/agents/search_agent/: search_agent_utils.py  search_agents.py
src/common/: common.py  prompts.py
src/parser/: supservisor_result_parser.py
src/utils/: get_paper_page_indexes.py  get_rss_url_values.py  paper_pdf_handler.py
