[tool.poetry]
name = "langgraph-multi-agent"
version = "0.1.0"
description = "langgraph multi agent environment"
authors = ["JminJ <jminju254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
langchain-elasticsearch = "^0.1.3"
langchain = "^0.1.20"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
arxiv = "^2.1.0"
pymupdf = "^1.24.4"
feedparser = "6.0.10"
pdfplumber = "^0.11.0"
beautifulsoup4 = "^4.12.3"
tabula-py = "^2.9.3"
jpype1 = "^1.5.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
